first changes in the web

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,16 +1,17 @@
 ---
-const personalImageAlt = "Miguel Ángel"
+const personalImageAlt = "Rubén Segura"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
+import GitHub from "./icons/GitHub.astro"
 ---
 
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      src="/profile.webp"
       alt={personalImageAlt}
     />
     <a
@@ -25,24 +26,31 @@ import SocialPill from "@/components/SocialPill.astro"
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, soy midudev
+    Hey, soy Rubén Segura
   </h1>
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+    +4 años de experiencia. <strong
+      >Desarrollador backend e iOS </strong
+    > de Jaén, España 🇪🇸. Estoy especializándome en desarrollo iOS  moderno con las diferentes herramientas del entorno Apple como Swift, SwiftUI, Swift Data y Firebase.
   </p>
+  <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300">
+    En esta web te invito a explorar mi portfolio de aplicaciones recientes.
+  </p>
+    
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="mailto:ruben.sr.apple@gmail.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://www.linkedin.com/in/rubenseguraromo/">
       <LinkedInIcon class="size-4" />
       LinkedIn
+    </SocialPill>
+    <SocialPill href="https://github.com/isthebetadev">
+      <GitHub class="size-4" />
+      GitHub
     </SocialPill>
   </nav>
 </div>
