--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Hero from "@/components/Hero.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Porfolio de Rubén Segura - Desarrollador backend e iOS con +4 años de experiencia"
+  description="Contrata a Rubén Segura para crear tu aplicación web o móvil. Desarrollador backend e iOS. Especializado en crear aplicaciones únicas."
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
