--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,19 +3,12 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Desarrolador Backend",
+    company: "NTT Data",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
-  },
-  {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
-    description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
-  },
+      "He trabajado en diversos proyectos para clientes importantes, enfocándome en el análisis y desarrollo de evolutivos, la resolución de incidencias, el mantenimiento y la documentación del código, utilizando diversas tecnologías y metodologías.",
+    link: "https://www.linkedin.com/in/rubenseguraromo/",
+  }
 ]
 ---
 
