--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ import LinkButton from "./LinkButton.astro"
 
 const TAGS = {
   NEXT: {
-    name: "Next.js",
+    name: "Swift",
     class: "bg-black text-white",
     icon: NextJS,
   },
@@ -15,7 +15,7 @@ const TAGS = {
     name: "Tailwind CSS",
     class: "bg-[#003159] text-white",
     icon: Tailwind,
-  },
+  }
 }
 const PROJECTS = [
   {
