Modified hero and experience components

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const EXPERIENCIE = [
     title: "Desarrolador Backend",
     company: "NTT Data",
     description:
-      "He trabajado en diversos proyectos para clientes importantes, enfocándome en el análisis y desarrollo de evolutivos, la resolución de incidencias, el mantenimiento y la documentación del código, utilizando diversas tecnologías y metodologías.",
+      "He trabajado en diversos proyectos para clientes de alto perfil a nivel nacional, destacándome como un desarrollador versátil y multidisciplinar. Mi experiencia abarca desde el análisis y desarrollo de evolutivos, la resolución de incidencias y el mantenimiento, hasta la documentación del código. He utilizado una amplia variedad de tecnologías y metodologías para asegurar la calidad y eficiencia en cada proyecto. Además, valoro profundamente el trabajo en equipo y la colaboración mutua, ya que creo firmemente en mejorar continuamente tanto a nivel personal como profesional, contribuyendo así al éxito colectivo de los proyectos.",
     link: "https://www.linkedin.com/in/rubenseguraromo/",
   }
 ]
