--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,10 +33,10 @@ import GitHub from "./icons/GitHub.astro"
   >
     +4 años de experiencia. <strong
       >Desarrollador backend e iOS </strong
-    > de Jaén, España 🇪🇸. Estoy especializándome en desarrollo iOS  moderno con las diferentes herramientas del entorno Apple como Swift, SwiftUI, Swift Data y Firebase.
+    >. Actualmente especializándome en desarrollo iOS  moderno con las diferentes herramientas del entorno Apple como Swift, SwiftUI, Swift Data y Firebase.
   </p>
-  <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300">
-    En esta web te invito a explorar mi portfolio de aplicaciones recientes.
+  <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold">
+    En esta web te invito a explorar mi <strong>portfolio</strong> de aplicaciones iOS.
   </p>
     
   <nav class="flex flex-wrap gap-4 mt-8">
