Work in About Me section

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,5 @@
 ---
- const personalImageAlt = "Miguel Ángel"
+ const personalImageAlt = "Rubén Segura"
 ---
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
@@ -7,29 +7,24 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
-      >.
+      Hola soy Rubén Segura, un apasionado por la programación con formación en FP Superior <strong>DAM</strong> y <strong>DAW</strong>. 
+      Con una sólida trayectoria como desarrollador backend, ahora estoy <strong>enfocando mi carrera hacia el desarrollo mobile en entorno Apple iOS</strong>.
     </p>
 
     <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
+      Durante los últimos meses, me he dedicado intensamente a aprender <strong>Swift, SwiftUI, y otras tecnologías y frameworks
+       clave para iOS de forma autodidacta</strong>, complementando mi formación con cursos especializados y la creación de un extenso
+        portfolio de aplicaciones. Mi objetivo es consolidarme como desarrollador iOS y seguir creciendo 
+        profesionalmente en este emocionante campo.
     </p>
 
     <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
+      Busco una <strong>oportunidad</strong> para aplicar mis habilidades y conocimientos en un entorno estimulante donde
+       pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. <strong> entusiasmado por 
+       las posibilidades que ofrece el desarrollo móvil y comprometido con mi desarrollo continuo en esta área</strong>.
     </p>
   </div>
 
-  <img width="200" height="200" src="/me.png" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+  <img width="200" height="200" src="/me.webp" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
 
 </article>
