change github social link

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -48,7 +48,7 @@ import GitHub from "./icons/GitHub.astro"
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
-    <SocialPill href="https://github.com/isthebetadev">
+    <SocialPill href="https://github.com/rubensrdev">
       <GitHub class="size-4" />
       GitHub
     </SocialPill>
