--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -23,6 +23,10 @@
        pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. <strong> entusiasmado por 
        las posibilidades que ofrece el desarrollo móvil y comprometido con mi desarrollo continuo en esta área</strong>.
     </p>
+
+    <p>
+      <i>Puedes descargar mi CV desde <a href="/public/projects/cv/cvruben.pdf">aquí 📋</i></a>
+    </p>
   </div>
 
   <img width="200" height="200" src="/me.webp" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
