--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -25,7 +25,7 @@
     </p>
 
     <p>
-      <i>Puedes descargar mi CV desde <a href="/public/projects/cv/cvruben.pdf">aquí 📋</i></a>
+      <i>Puedes descargar mi CV desde <a href="/projects/cv/cvruben.pdf">aquí 📋</i></a>
     </p>
   </div>
 
