update projects component

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -141,14 +141,8 @@ const PROJECTS = [
           {github && (
             <LinkButton href={github}>
               <GitHub class="size-6" />
-              Code
+              Código y resumen de la app
               
-            </LinkButton>
-          )}
-          {link && (
-            <LinkButton href={link}>
-              <YouTube class="size-4" />
-              Preview
             </LinkButton>
           )}
         </footer>
