Add new project and modified experience text

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,6 +16,11 @@ const TAGS = {
     class: "bg-[#003159] text-white",
     icon: Swift,
   },
+  SWIFTUICOREDATA: {
+    name: "Swift + Swift UI+ Core Data",
+    class: "bg-[#003159] text-white",
+    icon: Swift,
+  },
   FIREBASE: {
     name: "Firebase",
     class: "bg-[#003159] text-white",
@@ -23,6 +28,15 @@ const TAGS = {
   }
 }
 const PROJECTS = [
+{
+    title: "My News 📰",
+    description:
+      "My News es una aplicación para iOS que te mantiene informado sobre noticias internacionales actuales. Con dos secciones principales, permite explorar un listado de noticias y marcar las que desees leer más tarde. Las noticias guardadas se encuentran en una sección específica, donde puedes acceder a una vista detallada de cada artículo. Desarrollada con Swift, SwiftUI y Core Data, My News ofrece una experiencia de usuario moderna y eficiente.",
+    link: "https://github.com/rubensrdev/My-News-App",
+    github: "https://github.com/rubensrdev/My-News-App",
+    image: "/projects/appLogos/mynews.webp",
+    tags: [TAGS.SWIFTUICOREDATA],
+  },
   {
     title: "Chef Recipes 👨🏻‍🍳",
     description:
