Actualizando contenido de la web

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,20 +8,26 @@
   >
     <p>
       Hola soy Rubén Segura, un apasionado por la programación con formación en FP Superior <strong>DAM</strong> y <strong>DAW</strong>. 
-      Con una sólida trayectoria como desarrollador backend, ahora estoy <strong>enfocando mi carrera hacia el desarrollo mobile en entorno Apple iOS</strong>.
+      Con una sólida trayectoria como desarrollador de aplicaciones, ahora estoy <strong>enfocando mi carrera hacia el desarrollo en entorno Apple</strong>.
     </p>
 
     <p>
       Durante los últimos meses, me he dedicado intensamente a aprender <strong>Swift, SwiftUI, y otras tecnologías y frameworks
-       clave para iOS de forma autodidacta</strong>, complementando mi formación con cursos especializados y la creación de un extenso
-        portfolio de aplicaciones. Mi objetivo es consolidarme como desarrollador iOS y seguir creciendo 
-        profesionalmente en este emocionante campo.
+       clave para desarrollo nativo en entornos Apple de forma autodidacta</strong>, complementando mi formación con cursos especializados y la creación de un extenso
+        portfolio de aplicaciones.
     </p>
+
+    <p><strong>Para consolidar y afianzar mis conocimientos y conocer las mejores prácticas en desarrollo nativo en entornos Apple realicé el Swift Developer Program 2024 
+      que imparte Apple Coding Academy.</strong> 
+    </p>
+
+    <p>Mi objetivo es consolidarme como desarrollador iOS y seguir creciendo 
+      profesionalmente en este emocionante campo.</p>
 
     <p>
       Busco una <strong>oportunidad</strong> para aplicar mis habilidades y conocimientos en un entorno estimulante donde
-       pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. <strong> entusiasmado por 
-       las posibilidades que ofrece el desarrollo móvil y comprometido con mi desarrollo continuo en esta área</strong>.
+       pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. <strong> Entusiasmado por 
+       las posibilidades que ofrece el desarrollo nativo en entornos Apple y comprometido con mi especialización en esta área</strong>.
     </p>
 
     <p>
