--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,7 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
     date: "Actualmente...",
-    title: "Desarrolador Backend",
+    title: "Desarrollador",
     company: "NTT Data",
     description:
       "He trabajado en distintos proyectos para clientes de alto perfil a nivel nacional, destacándome como un desarrollador versátil y multidisciplinar. Mi experiencia abarca desde el análisis y desarrollo de evolutivos, la resolución de incidencias y el mantenimiento y documentación de código. He utilizado una amplia variedad de tecnologías y metodologías para asegurar la calidad y eficiencia en cada proyecto. Además, valoro profundamente el trabajo en equipo y la colaboración mutua, ya que creo firmemente en la mejora continua tanto a nivel personal como profesional, contribuyendo así al éxito colectivo de los proyectos.",
