--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,16 +28,19 @@ import GitHub from "./icons/GitHub.astro"
   >
     Hola, soy Rubén Segura
   </h1>
-  <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
-  >
-    +4 años de experiencia. <strong
-      >Desarrollador backend e iOS </strong
-    >. Actualmente especializándome en desarrollo iOS  moderno con las diferentes herramientas del entorno Apple como Swift, SwiftUI, Swift Data y Firebase.
-  </p>
+
   <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold">
-    En esta web te invito a explorar mi <strong>portfolio</strong> de aplicaciones iOS.
+    <strong> Desarrollador especializado en entornos Apple</strong>.
   </p>
+  <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300 dark:[&>strong]:text-yellow-200">Swift, Swift UI, Swift Data, Swift Testing, Xcode, MVVM, Clean Architecture, Async/Await, Concurrencia e IA.</p>
+  <p class="mt-6 text-xl  text-gray-800  dark:text-gray-300 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold">
+    En esta web te invito a explorar mi <strong>portfolio</strong> de aplicaciones iOS y <strong>formación</strong>  y <strong>experiencia</strong>.
+  </p>
+  <p
+  class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+>
+  +5 años de experiencia profesional. <strong>
+</p>
     
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:ruben.sr.apple@gmail.com">
