--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,14 +10,11 @@ const currentYear = new Date().getFullYear()
   >
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="https://midu.dev/" class="hover:underline">Rubén Segura - Backend e iOS Dev</a>.
+      <a href="https://www.linkedin.com/in/rubenseguraromo/" class="hover:underline">Rubén Segura - Desarrollador en entornos Apple</a>.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
-      <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
-      </li>
       <li>
         <a id="contacto" href="mailto:ruben.sr.apple@gmail.com" class="hover:underline"
           >Contacto</a
