actualización de texto

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -23,14 +23,15 @@
 
     <p>Mi objetivo es consolidarme como desarrollador iOS y seguir creciendo 
       profesionalmente en este emocionante campo.</p>
+    <p><strong> Entusiasmado por 
+      las posibilidades que ofrece el desarrollo nativo en entornos Apple y comprometido con mi especialización en esta área</strong>.</p>
 
+    <p>
     <p>
       Busco una <strong>oportunidad</strong> para aplicar mis habilidades y conocimientos en un entorno estimulante donde
-       pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. <strong> Entusiasmado por 
-       las posibilidades que ofrece el desarrollo nativo en entornos Apple y comprometido con mi especialización en esta área</strong>.
+       pueda seguir aprendiendo y contribuir al desarrollo de soluciones innovadoras. 
     </p>
 
-    <p>
       <i>Puedes descargar mi CV desde <a href="/projects/cv/cvruben.pdf">aquí 📋</i></a>
     </p>
   </div>
