cambiado titulo y descripción del indx

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Hero from "@/components/Hero.astro"
 ---
 
 <Layout
-  title="Porfolio de Rubén Segura - Desarrollador backend e iOS con +4 años de experiencia"
-  description="Contrata a Rubén Segura para crear tu aplicación web o móvil. Desarrollador backend e iOS. Especializado en crear aplicaciones únicas."
+  title="Porfolio de Rubén Segura - Desarrollador en entornos Apple"
+  description="Contrata a Rubén Segura para crear tu aplicación iOS nativa. Especializado en crear aplicaciones y experiencias únicas."
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
