--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,9 +1,9 @@
 ---
-import GitHub from "./icons/GitHub.astro"
-import Swift from "./icons/Swift.astro"
-import Firebase from "./icons/Firebase.astro"
-import YouTube from "./icons/YouTube.astro"
-import LinkButton from "./LinkButton.astro"
+import GitHub from "./icons/GitHub.astro";
+import Swift from "./icons/Swift.astro";
+import Firebase from "./icons/Firebase.astro";
+import YouTube from "./icons/YouTube.astro";
+import LinkButton from "./LinkButton.astro";
 
 const TAGS = {
   SWIFTUI: {
@@ -12,12 +12,12 @@ const TAGS = {
     icon: Swift,
   },
   SWIFTUIDATA: {
-    name: "Swift + Swift UI+ Swift Data",
+    name: "Swift + Swift UI + Swift Data",
     class: "bg-[#003159] text-white",
     icon: Swift,
   },
   SWIFTUICOREDATA: {
-    name: "Swift + Swift UI+ Core Data",
+    name: "Swift + Swift UI + Core Data",
     class: "bg-[#003159] text-white",
     icon: Swift,
   },
@@ -25,10 +25,25 @@ const TAGS = {
     name: "Firebase",
     class: "bg-[#003159] text-white",
     icon: Firebase,
-  }
-}
+  },
+  SDPSKILLS: {
+    name: "Swift 6 + Swift UI + Strict Concurrency, Clean Architecture, MVVM, API, local persistence, iPhone and iPad version",
+    class: "bg-[#003159] text-white",
+    icon: Swift,
+  },
+};
 const PROJECTS = [
-{
+  {
+    title: "Manga Master",
+    description:
+      "Manga Master es mi proyecto más destacado, desarrollado como parte del Swift Developer Program 2024. Esta aplicación iOS te permite explorar un catálogo de más de 64.000 mangas, organizarlos en tu colección personal y llevar un seguimiento detallado de tu lectura.",
+    link: "https://github.com/rubensrdev/Mis-Mangas",
+    github: "https://github.com/rubensrdev/Mis-Mangas",
+    youtube: "https://www.youtube.com/watch?v=UBPPfD4RbfU",
+    image: "/projects/appLogos/mangaMaster.webp",
+    tags: [TAGS.SDPSKILLS],
+  },
+  {
     title: "My News 📰",
     description:
       "My News es una aplicación para iOS que te mantiene informado sobre noticias internacionales actuales. Con dos secciones principales, permite explorar un listado de noticias y marcar las que desees leer más tarde. Las noticias guardadas se encuentran en una sección específica, donde puedes acceder a una vista detallada de cada artículo. Desarrollada con Swift, SwiftUI y Core Data, My News ofrece una experiencia de usuario moderna y eficiente.",
@@ -53,7 +68,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/my-expenses",
     github: "https://github.com/rubensrdev/my-expenses",
     image: "/projects/appLogos/myExpenses.webp",
-    tags: [ TAGS.SWIFTUIDATA],
+    tags: [TAGS.SWIFTUIDATA],
   },
   {
     title: "Books Diary 📖",
@@ -62,7 +77,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/booksdiary",
     github: "https://github.com/rubensrdev/booksdiary",
     image: "/projects/appLogos/booksDiary.webp",
-    tags: [ TAGS.SWIFTUIDATA],
+    tags: [TAGS.SWIFTUIDATA],
   },
   {
     title: "Do I Have Time? ⌚️",
@@ -71,7 +86,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/do-I-have-time",
     github: "https://github.com/rubensrdev/do-I-have-time",
     image: "/projects/appLogos/doIHaveTime.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
   {
     title: "Game Stream 🎮",
@@ -80,7 +95,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/GameStream",
     github: "https://github.com/rubensrdev/GameStream",
     image: "/projects/appLogos/gameStream.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
   {
     title: "Pokedex 🐛",
@@ -89,7 +104,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/pokedex-swiftui",
     github: "https://github.com/rubensrdev/pokedex-swiftui",
     image: "/projects/appLogos/pokedex.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
   {
     title: "Tiempo ⛅️",
@@ -98,7 +113,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/tiempo-swiftui",
     github: "https://github.com/rubensrdev/tiempo-swiftui",
     image: "/projects/appLogos/tiempo.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
   {
     title: "TODO ✅",
@@ -107,7 +122,7 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/to-do-swiftui",
     github: "https://github.com/rubensrdev/to-do-swiftui",
     image: "/projects/appLogos/todo.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
   {
     title: "Calculator 🤔",
@@ -116,56 +131,74 @@ const PROJECTS = [
     link: "https://github.com/rubensrdev/calculadora-swiftui",
     github: "https://github.com/rubensrdev/calculadora-swiftui",
     image: "/projects/appLogos/calculator.webp",
-    tags: [ TAGS.SWIFTUI],
+    tags: [TAGS.SWIFTUI],
   },
-]
+];
 ---
 
 <div class="flex flex-col gap-y-16">
-  {
-    PROJECTS.map(({ image, title, description, tags, link, github }) => (
-    <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
+  {PROJECTS.map(({ image, title, description, tags, link, github, youtube }) => (
+    <article
+      class={`flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0 
+        ${
+          title === "Manga Master"
+            ? "border-2 border-blue-500 dark:border-blue-400 shadow-2xl p-6 rounded-xl bg-gradient-to-br from-blue-100 to-white dark:from-blue-900 dark:to-black"
+            : ""
+        }`}
+    >
+      <div class="w-full md:w-1/2">
+        <div
+          class={`relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl 
+            md:group-hover:-translate-y-1 md:group-hover:shadow-2xl 
+            lg:border lg:border-gray-300 dark:lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-200 dark:lg:hover:bg-gray-800/50 
+            ${title === "Manga Master" ? "border-blue-500 dark:border-blue-400 shadow-blue-500 dark:shadow-blue-900" : ""}`}
+        >
+          <img
+            alt="Apps iOS desarrolladas por Rubén Segura"
+            class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
+            loading="lazy"
+            src={image}
+          />
+        </div>
+      </div>
 
-<div class="w-full md:w-1/2">
-    <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-      <img alt="Apps iOS desarrolladas por Rubén Segura" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
-    </div>
-  </div>
+      <div class="w-full md:w-1/2 md:max-w-lg">
+        <h3
+          class={`text-2xl font-bold text-gray-900 dark:text-gray-100 ${
+            title === "Manga Master" ? "text-blue-700 dark:text-blue-400" : ""
+          }`}
+        >
+          {title} {title === "Manga Master" && "🚀"}
+        </h3>
+        <div class="flex flex-wrap mt-2">
+          <ul class="flex flex-row mb-2 gap-x-2">
+            {tags.map((tag) => (
+              <li>
+                <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}>
+                  <tag.icon class="size-4" />
+                  {tag.name}
+                </span>
+              </li>
+            ))}
+          </ul>
 
-  <div class="w-full md:w-1/2 md:max-w-lg">
-    <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">
-      {title}
-    </h3>
-    <div class="flex flex-wrap mt-2">
-      <ul class="flex flex-row mb-2 gap-x-2">
-          {tags.map((tag) => (
-            <li>
-              <span
-                class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 `}
-              >
-                <tag.icon class="size-4" />
-                {tag.name}
-              </span>
-            </li>
-          ))}
-        </ul>
-
-      <div class="mt-2 text-gray-700 dark:text-gray-400">{description}</div>
-      <footer class="flex items-end justify-start mt-4 gap-x-4">
-          {github && (
-            <LinkButton href={github}>
-              <GitHub class="size-6" />
-              Código y resumen de la app
-              
-            </LinkButton>
-          )}
-        </footer>
-    </div>
-  </div>
-</article>
-    ))
-  }
+          <div class="mt-2 text-gray-800 dark:text-gray-400">{description}</div>
+          <footer class="flex items-end justify-start mt-4 gap-x-4">
+            {github && (
+              <LinkButton href={github}>
+                <GitHub class="size-6" />
+                App
+              </LinkButton>
+            )}
+            {youtube && (
+              <LinkButton href={youtube}>
+                <YouTube class="size-6" />
+                Ver demo
+              </LinkButton>
+            )}
+          </footer>
+        </div>
+      </div>
+    </article>
+  ))}
 </div>
-
-
-
